--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+body {
+    background-color: #FAFAFA;
+    color: #E30074
+}
+
 .App {
-  text-align: center;
+    /* border: 1px solid blue; */
+    height: 100vh;
+    margin: 0 auto;
+    width: 100vw;
+    text-align: center;
+}
+.main-title {
+    /* border: 1px solid yellow; */
+    margin: 1em auto;
+    width: 80%;
+    text-transform: capitalize;
+    letter-spacing: 3em;
+    line-height: 5em;
+    text-shadow: 3px 1px 5px rgba(227, 0, 116, 0.2);
+}
+hr {
+    background-color: #E30074;
+    border: 1px solid #E30074;
+    width: 100%;
+    height: 1px;
+    margin: -.5em auto 1em auto;
+    box-shadow: 3px 1px 5px rgba(227, 0, 116, 0.2);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width:1080px){
+    .App {
+        width: 100vw;
+    }
+    .main-title {
+        letter-spacing: .3em;
+        margin: 1em auto;
+    }
 }
