--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@ body {
     margin: 1em auto;
     width: 80%;
     text-transform: capitalize;
-    letter-spacing: 3em;
+    letter-spacing: 1.5em;
+    word-spacing: 2em;
     line-height: 5em;
     text-shadow: 3px 1px 5px rgba(227, 0, 116, 0.2);
 }
