--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body {
 }
 .main-title {
     /* border: 1px solid yellow; */
+    background-color: rgb(30,30,30);
     margin: 1em auto;
     width: 80%;
     text-transform: capitalize;
@@ -29,7 +30,7 @@ body {
 }
 hr {
     background-color: #E30074;
-    border: 1px solid #E30074;
+    border: 2px solid #E30074;
     width: 100%;
     height: 1px;
     margin: -.5em auto 1em auto;
