--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
 }
 .main-title {
     /* border: 1px solid yellow; */
-    background-color: rgb(30,30,30);
+    /* background-color: rgb(30,30,30); */
     margin: 1em auto;
     width: 80%;
     text-transform: capitalize;
