--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -11,38 +11,14 @@ body {
 }
 
 .App {
-    /* border: 1px solid blue; */
-    height: 100vh;
+    /* height: 100vh; */
     margin: 0 auto;
-    width: 100vw;
+    width: 80vw;
     text-align: center;
-}
-.main-title {
-    /* border: 1px solid yellow; */
-    /* background-color: rgb(30,30,30); */
-    margin: 1em auto;
-    width: 80%;
-    text-transform: capitalize;
-    letter-spacing: 1.5em;
-    word-spacing: 2em;
-    line-height: 5em;
-    text-shadow: 3px 1px 5px rgba(227, 0, 116, 0.2);
-}
-hr {
-    background-color: #E30074;
-    border: 2px solid #E30074;
-    width: 100%;
-    height: 1px;
-    margin: -.5em auto 1em auto;
-    box-shadow: 3px 1px 5px rgba(227, 0, 116, 0.2);
 }
 
 @media screen and (max-width:1080px){
     .App {
         width: 100vw;
-    }
-    .main-title {
-        letter-spacing: .3em;
-        margin: 1em auto;
     }
 }
