--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -11,7 +11,8 @@ body {
 }
 
 .App {
-    /* height: 100vh; */
+    height: 100vh;
+    /* border: 1px solid black; */
     margin: 0 auto;
     width: 80vw;
     text-align: center;
