--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -38,6 +38,23 @@ label {
     padding: 0.3rem;
 }
 
+.submit-btn {
+    background-color: white;
+    color: #E30074;
+    border: none;
+    padding: 0.3rem;
+    border-radius: 0.75rem;
+    margin: 0 auto;
+    width: 5.5rem;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+    box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
+    transition: all 0.3s ease-in-out;
+}
+.submit-btn:hover {
+    transform: scale(1.2);
+}
+
 .login-form:hover {
     transform: scale(1.05);
 }
