--- a/client/src/styles/Title.css
+++ b/client/src/styles/Title.css
@@ -7,6 +7,12 @@
     line-height: 5em;
     text-shadow: 3px 1px 5px rgba(227, 0, 116, 0.2);
 }
+.title-subheader{
+    letter-spacing: .3rem;
+    word-spacing: 1rem;
+    font-weight: bold;
+    margin-top: -1rem;
+}
 
 hr {
     background-color: #E30074;
