added cursor pointer to login button

--- a/client/src/styles/LoginButton.css
+++ b/client/src/styles/LoginButton.css
@@ -11,6 +11,7 @@
     letter-spacing: 0.5rem;
     box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .login-btn:hover {
