--- a/client/src/styles/DarkModeButton.css
+++ b/client/src/styles/DarkModeButton.css
@@ -10,6 +10,7 @@
     letter-spacing: 0.2rem;
     box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .dark-mode-toggle:hover {
@@ -27,6 +28,7 @@
     letter-spacing: 0.2rem;
     box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .dark-mode-toggle-off:hover {
