fixed sub-title for small screens, added parts of form and navigation

--- a/client/src/styles/Title.css
+++ b/client/src/styles/Title.css
@@ -29,6 +29,10 @@ hr {
         letter-spacing: .3em;
         margin: 1em auto;
     }
+    .title-subheader{
+        letter-spacing: 0.3;
+        font-size: 0.8em;
+    }
 }
 @media screen and (min-width: 1080px) {
     .title-subheader{
