--- a/client/src/styles/AddGear.css
+++ b/client/src/styles/AddGear.css
@@ -3,6 +3,13 @@ div {
     margin-top: 0.5em;
 }
 
+.add-gear-form {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+}
+
 .form-container {
     margin: 0 auto;
     border: 1px solid  #E30074;
@@ -35,6 +42,36 @@ div {
     outline: none;
 }
 
+.image-select {
+    margin-left: 1em;
+    font-size: 0.6em;
+    
+}
+
+.image-div {
+    margin-top: 0.5rem;
+}
+
+.img-preview {
+    margin-left: 1.5rem;
+    width: 10vw;
+}
+
+.add-gear-btn {
+    margin: 1em auto;
+    border-radius: 2rem;
+    width: 30%;
+    border-style: none;
+    background-color: #E30074;
+    color: #fafafa;
+    padding: 0.5em;
+    cursor: pointer;
+    transition: all 0.3s linear;
+}
+
+.add-gear-btn:hover {
+    transform: scale(1.2);
+}
 
 @media screen and (min-width:1000px) {
     .brand-input {
@@ -43,6 +80,56 @@ div {
     .form-container {
         width: 50vw
     }
+    .select-div {
+        margin-left: -3rem;
+    }
+    .image-div {
+        margin-left: 3rem;
+    }
+    .image-select {
+        margin-left: 1.5em;
+    }
+    .add-gear-btn {
+        margin: 1em auto;
+        border-radius: 2rem;
+        width: 20%;
+    
+    }
+}
+@media screen and (max-width:1000px) {
+    .select-div {
+        margin-left: -0.8rem;
+    }
+    .select-div  .brand-input{
+        font-size: 1rem;
+        width: 50%;
+    }
+    .image-div {
+        margin-top: 1rem;
+        margin-left: 2.7em;
+    }
+    .image-select {
+        margin-left: 0.9em;
+        font-size: 0.6em;
+    }
+    .img-preview {
+        width: 20vw;
+    }
+    
 }
 
+::placeholder {
+    color:rgba(227,0,116,0.8);
+    font-size: 0.8rem;
+}
 
+#image::file-selector-button {
+    border: 1px solid #E30074;
+    border-radius: 0.6rem;
+    font-size: 0.8;
+    text-align: center;
+    padding: 0.2rem;
+    background-color: transparent;
+    color: #E30074;
+    cursor: pointer;
+}
