--- a/client/src/styles/User.css
+++ b/client/src/styles/User.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
 .container {
     /* border: 1px solid yellow; */
     width: 80vw;
@@ -15,28 +18,42 @@
 
 .gear-list-items {
     list-style: none;
+    margin-bottom: 3rem;
     width: 80vw;
     border: #E30074 1px solid;
     border-radius: 1rem;
 }
 
-.gear-main h1{   
+
+.gear-main h1{
+    font-family: 'Playfair Display', serif; 
+    font-weight: 700;
     font-size: 2rem;
+    letter-spacing: 0.5rem;
 }
 .gear-main h2{
-    font-size: 2rem;
+    font-family: 'Playfair Display', serif;
+    font-weight: 600;
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
 }
 
 .gear-image {
     height: 200px;
     object-fit: cover;
+    border: 2px solid rgb(35, 35, 35);
+    box-shadow: 0px 0px 5px 0px rgba(227, 0, 116,0.6);
+    border-radius: 0.5rem;
 }
+
 
 @media screen and (min-width: 1000px) {
     .container-center {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         justify-content: center;
+        margin: 0 auto 0 1.5rem;
+
     }
     .gear-list-items {
         width: 23.3vw;
