--- a/client/src/styles/User.css
+++ b/client/src/styles/User.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,600&display=swap');
+
 
 .container {
     /* border: 1px solid yellow; */
@@ -17,25 +19,13 @@
 }
 
 .gear-list-items {
+    text-align: center;
+    align-items: center;
     list-style: none;
     margin-bottom: 3rem;
     width: 80vw;
     border: #E30074 1px solid;
     border-radius: 1rem;
-}
-
-
-.gear-main h1{
-    font-family: 'Playfair Display', serif; 
-    font-weight: 700;
-    font-size: 2rem;
-    letter-spacing: 0.5rem;
-}
-.gear-main h2{
-    font-family: 'Playfair Display', serif;
-    font-weight: 600;
-    font-size: 1.2rem;
-    letter-spacing: 0.1rem;
 }
 
 .gear-image {
@@ -44,6 +34,80 @@
     border: 2px solid rgb(35, 35, 35);
     box-shadow: 0px 0px 5px 0px rgba(227, 0, 116,0.6);
     border-radius: 0.5rem;
+}
+.brand-text{
+    font-family: 'Playfair Display', serif; 
+    font-weight: 700;
+    font-size: 1.8rem;
+    letter-spacing: 0.2rem;
+}
+.sub-text-1{
+    font-family: 'Moon Dance', cursive;
+    font-weight: bold;
+    font-size: 2rem;
+    letter-spacing: 0.2rem;
+}
+.sub-text-2{
+    font-family: 'Moon Dance', cursive;
+    font-weight: bold;
+    font-size: 2rem;
+    letter-spacing: 0.2rem;
+}
+.sub-text-3 {
+    font-family: 'Moon Dance', cursive;
+    font-weight: bold;
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+}
+.sub-text-4 {
+    font-family: 'Moon Dance', cursive;
+    font-weight: bold;
+    font-size: .8rem;
+    letter-spacing: 0.2rem;
+}
+.model-text {
+    font-family: 'Playfair Display', serif;
+    font-weight: 600;
+    font-size: 1.8rem;
+    letter-spacing: 0.2rem;
+    margin-bottom: 1rem;
+}
+hr {
+    width: 50%;
+    border: none;
+}
+.gear-type-text{
+    font-family: 'Moon Dance', cursive;
+    font-weight: bold;
+    font-size: 1.6rem;
+    letter-spacing: 0.2rem;
+    padding-bottom: 0.2rem;
+}
+.color-text{
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+    padding-bottom: 0.2rem;
+}
+.year-text{
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+}
+.serial-number-text{
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    font-size: .8rem;
+    letter-spacing: 0.1rem;
+    padding-bottom: 0.2rem;
+}
+.details-text{
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    font-size: .8rem;
+    letter-spacing: 0.1rem;
 }
 
 
