--- a/client/src/styles/User.css
+++ b/client/src/styles/User.css
@@ -26,6 +26,11 @@
     width: 80vw;
     border: #E30074 1px solid;
     border-radius: 1rem;
+    transition: all .2s linear;
+}
+.gear-list-items:hover {
+    scale: 1.05;
+    box-shadow: 0px 0px 10px 0px rgba(227, 0, 116,0.5);
 }
 
 .gear-image {
@@ -34,6 +39,12 @@
     border: 2px solid rgb(35, 35, 35);
     box-shadow: 0px 0px 5px 0px rgba(227, 0, 116,0.6);
     border-radius: 0.5rem;
+    transition: all .2s linear;
+    cursor: pointer;
+}
+.gear-image:hover {
+    scale: 2;
+    translate: 0 -2em;
 }
 .brand-text{
     font-family: 'Playfair Display', serif; 
@@ -119,6 +130,11 @@ hr {
     padding: .2rem;
     border-radius: .5em;
     cursor: pointer;
+    transition: all .2s linear;
+}
+
+.details-btn:hover {
+    scale: 1.1;
 }
 
 
