--- a/client/src/styles/User.css
+++ b/client/src/styles/User.css
@@ -137,7 +137,23 @@ hr {
     scale: 1.1;
 }
 
+.icon-container {
+    /* border: 1px solid blue; */
+    width: 20%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 auto;
+    justify-items: center;
+    padding-bottom: 1rem;
+    transition: all .2s linear;
+}
+.edit-icon {
+    cursor: pointer;
+}
 
+.edit-icon:hover {
+    scale:1.4;
+}
 @media screen and (min-width: 1000px) {
     .container-center {
         display: grid;
