--- a/client/src/styles/LoginButton.css
+++ b/client/src/styles/LoginButton.css
@@ -1,7 +1,7 @@
 
 .login-btn {
-    background-color: #E30074;
-    color: white;
+    background-color: transparent;
+    color: #E30074;
     padding: 0.75rem;
     border: none;
     border-radius: 0.75rem;
@@ -9,7 +9,7 @@
     width: 12rem;
     font-weight: bold;
     letter-spacing: 0.5rem;
-    box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
+    box-shadow: 1px 1px 10px rgba(227,0,116, 0.8);
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
