--- a/client/src/styles/DarkModeButton.css
+++ b/client/src/styles/DarkModeButton.css
@@ -1,6 +1,6 @@
 .dark-mode-toggle-on {
-    background-color: #E30074;
-    color: white;
+    background-color: white;
+    color: #E30074;
     padding: 0.75rem;
     border: none;
     border-radius: 50rem;
@@ -8,17 +8,17 @@
     width: 12rem;
     font-weight: bold;
     letter-spacing: 0.2rem;
-    box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
+    box-shadow: 1px 1px 10px rgba(227,0,116, 0.8);
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
 
-.dark-mode-toggle:hover {
+.dark-mode-toggle-on:hover {
     transform: scale(1.1);
 }
 .dark-mode-toggle-off {
-    background-color: #E30074;
-    color: white;
+    background-color: transparent;
+    color: #E30074;
     padding: 0.75rem;
     border: none;
     border-radius: 0.75rem;
@@ -26,7 +26,7 @@
     width: 12rem;
     font-weight: bold;
     letter-spacing: 0.2rem;
-    box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
+    box-shadow: 1px 1px 10px rgba(227,0,116, 0.8);
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
