--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -7,10 +7,10 @@
     border: 1px solid black;
     display: grid;
     padding: 1rem;
-    background-color: #E30074;
-    box-shadow: 2px 2px 5px rgba(227,0,116,0.7);
+    background-color: transparent;
+    box-shadow: 0px 0px 15px rgba(227,0,116,0.7);
     border-radius: 0.5rem;
-    color: white;
+    color: #E30074;
     max-width: 30vw;
     margin: 8rem auto 0 auto;
     grid-template-columns: 1fr;
@@ -25,12 +25,13 @@ label {
 
 .input {
     width: 30%;
+    background-color: rgba(227,0,116, 0.5);
     outline: none;
     margin: auto;
     border: none;
     font-weight: bold;
     letter-spacing: 0.1em;
-    color: #E30074;
+    color: white;
     text-align: center;
     border-radius: 0.2rem;
     margin-top: 0.5rem;
@@ -39,7 +40,7 @@ label {
 }
 
 .submit-btn {
-    background-color: white;
+    background-color: transparent;
     color: #E30074;
     border: none;
     padding: 0.3rem;
@@ -48,7 +49,7 @@ label {
     width: 5.5rem;
     font-weight: bold;
     letter-spacing: 0.2rem;
-    box-shadow: 1px 1px 10px rgba(227,0,116, 0.4);
+    box-shadow: 1px 1px 10px rgba(227,0,116, 0.8);
     transition: all 0.3s ease-in-out;
 }
 .submit-btn:hover {
