--- a/client/src/styles/User.css
+++ b/client/src/styles/User.css
@@ -35,6 +35,7 @@
 
 .gear-image {
     height: 200px;
+    max-width: 80%;
     object-fit: cover;
     border: 2px solid rgb(35, 35, 35);
     box-shadow: 0px 0px 5px 0px rgba(227, 0, 116,0.6);
